tests/success/match_to_type_pointer_const_propagation.bz
function func_pcp(: **const int32);
function func_cpp(: *const *int32);
function func_cpcp(: *const *const int32);

function main()
{
	let i = 0;

	let p: *int32 = &i;
	let cp: *const int32 = &i;
	let pp: **int32 = &p;
	let cpp: *const *int32 = &p;
	let pcp: **const int32 = &cp;
	let cpcp: *const *const int32 = &cp;

	func_cpcp(pp);
	func_cpcp(cpp);
	func_cpcp(pcp);
	func_cpcp(cpcp);

	// func_pcp(pp);
	// func_pcp(cpp);
	func_pcp(pcp);
	// func_pcp(cpcp);

	func_cpp(pp);
	func_cpp(cpp);
	// func_cpp(pcp);
	// func_cpp(cpcp);
}
