tests/error/match_to_type_pointer_const_propagation.bz
function func_pcp(: **const int32);

function main()
{
	let i = 0;

	let p: *int32 = &i;
	let pp: **int32 = &p;

	func_pcp(pp);
}
